syntax = "proto3";

option csharp_namespace = "GrpcGreeterClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  User user = 2;
}

message User{
  string first_name = 1;
  string last_name = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
